[gd_scene load_steps=5 format=2]

[ext_resource path="res://pause.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Text/TangoSans.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
extra_spacing_bottom = 20
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -957.0
margin_top = -411.5
margin_right = 957.0
margin_bottom = 411.5
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -323.0
margin_top = -411.5
margin_right = 323.0
margin_bottom = 411.5
color = Color( 0.0823529, 0.0823529, 0.345098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -411.5
margin_right = 300.0
margin_bottom = 411.5
custom_constants/separation = 80
alignment = 1

[node name="Continue" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 300.0
margin_right = 600.0
margin_bottom = 371.0
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="Settings" type="Button" parent="ColorRect/VBoxContainer"]
visible = false
margin_top = 376.0
margin_right = 600.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="Stats" type="Button" parent="ColorRect/VBoxContainer"]
visible = false
margin_top = 451.0
margin_right = 600.0
margin_bottom = 522.0
custom_fonts/font = SubResource( 2 )
text = "Stats"

[node name="Quit" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 451.0
margin_right = 600.0
margin_bottom = 522.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="quitWarning" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -225.0
margin_right = 425.0
margin_bottom = 225.0

[node name="ColorRect" type="ColorRect" parent="quitWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.184314, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="quitWarning/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 125
alignment = 1

[node name="Label" type="Label" parent="quitWarning/ColorRect/VBoxContainer"]
margin_top = 52.0
margin_right = 850.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 3 )
text = "You are the host of the server
Are you sure you want to leave?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="quitWarning/ColorRect/VBoxContainer"]
margin_top = 318.0
margin_right = 850.0
margin_bottom = 398.0
custom_constants/separation = 125
alignment = 1

[node name="quitFR" type="Button" parent="quitWarning/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 362.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
custom_colors/font_color = Color( 0.862745, 0.0666667, 0.0666667, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="noQuit" type="Button" parent="quitWarning/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 487.0
margin_right = 737.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Back"

[connection signal="pressed" from="ColorRect/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="quitWarning/ColorRect/VBoxContainer/HBoxContainer/quitFR" to="." method="_on_quitFR_pressed"]
[connection signal="pressed" from="quitWarning/ColorRect/VBoxContainer/HBoxContainer/noQuit" to="." method="_on_noQuit_pressed"]
